Closed Bug 1834498 Opened 2 years ago Closed 2 years ago

debug build bustage 2023-05-23 - /builds/worker/checkouts/gecko/comm/mailnews/imap/src/nsImapService.cpp:2542:66: error: cannot pass non-trivial object of type 'nsAutoCString' to variadic constructor; expected type from format string was 'char *'

Categories

(MailNews Core :: Networking: IMAP, defect, P5)

Tracking

(thunderbird_esr102 unaffected)

RESOLVED FIXED
115 Branch
Tracking Status
thunderbird_esr102 --- unaffected

People

(Reporter: intermittent-bug-filer, Assigned: mkmelin)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Summary: debug build buistage 2023-05-23 - /builds/worker/checkouts/gecko/comm/mailnews/imap/src/nsImapService.cpp:2542:66: error: cannot pass non-trivial object of type 'nsAutoCString' to variadic constructor; expected type from format string was 'char *' → debug build bustage 2023-05-23 - /builds/worker/checkouts/gecko/comm/mailnews/imap/src/nsImapService.cpp:2542:66: error: cannot pass non-trivial object of type 'nsAutoCString' to variadic constructor; expected type from format string was 'char *'
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED

Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/9d04c39d3e95
fix debug build bustage in nsImapService.cpp. r=freaktechnik

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: