Bug 1834498 - fix debug build bustage in nsImapService.cpp. r=freaktechnik

Differential Revision: https://phabricator.services.mozilla.com/D178772

--HG--
extra : moz-landing-system : lando